tests/derive_compile_fail/empty_crate_path.rs
use snowflake_connector_rs::FromRow;

#[derive(FromRow)]
#[snowflake(crate = "")]
struct Bad {
    id: i64,
}

fn main() {}
